// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check field generator 1`] = `
"query user($user_context_user_details_region_language: String, $user_details_region_language: String, $id: Int!){
    user(id: $id){
        id
        username
        email
        createdAt
        context{
            user{
                id
                username
                email
                createdAt
                details{
                    ... on Guest {
                        region(language: $user_context_user_details_region_language)
                    }
                    ... on Member {
                        address
                    }
                }
            }
            domain
        }
        details{
            ... on Guest {
                region(language: $user_details_region_language)
            }
            ... on Member {
                address
            }
        }
    }
}"
`;

exports[`check field generator for non-empty array ([]!) 1`] = `
"query users{
    users{
        email
    }
}"
`;

exports[`check field generator with skeleton - circular 1`] = `
"query user($user_details_region_language: String, $id: Int!){
    user(id: $id){
        email
        details{
            ... on Guest {
                region(language: $user_details_region_language)
            }
            ... on Member {

            }
        }
    }
}"
`;

exports[`check field generator with skeleton - multiple fields with same query parameter name 1`] = `
"query setConfig($setConfig_level_domain: String!, $setConfig_lastSeen_domain: String!, $setConfig_theme_domain: String!, $prefs: PrefsInput){
    setConfig(prefs: $prefs){
        language
        level(domain: $setConfig_level_domain)
        lastSeen(domain: $setConfig_lastSeen_domain)
        theme(domain: $setConfig_theme_domain)
    }
}"
`;

exports[`check field generator with skeleton - multiple fields with same query parameter name 2`] = `
"query setConfig($setConfig_level_domain: String!, $setConfig_lastSeen_domain: String!, $setConfig_theme_domain: String!, $prefs: PrefsInput){
    setConfig(prefs: $prefs){
        language
        level(domain: $setConfig_level_domain)
        lastSeen(domain: $setConfig_lastSeen_domain)
        theme(domain: $setConfig_theme_domain)
    }
}"
`;

exports[`check field generator with skeleton - nested types 1`] = `
"query user($id: Int!){
    user(id: $id){
        email
        context{
            domain
        }
    }
}"
`;

exports[`check field generator with skeleton - unions 1`] = `
"query user($user_details_region_language: String, $id: Int!){
    user(id: $id){
        email
        details{
            ... on Guest {
                region(language: $user_details_region_language)
            }
            ... on Member {

            }
        }
    }
}"
`;

exports[`check field generator with skeleton 1`] = `
"query user($id: Int!){
    user(id: $id){
        email
    }
}"
`;

exports[`check warnings for no mutations, query, subscription in schema 1`] = `Object {}`;
